--- a/styles.css
+++ b/styles.css
@@ -11,17 +11,19 @@ body{
 	flex-direction:column;
 	/* justify-content:center; */
 	/* align-items:center; */
+	border-radius:10px;
 }
 .book{
-	background-color: gray;
+	background-color: whitesmoke;;
 	width:70vw;
 	margin:10px 0;
 	border-radius:5px;
 }
 h1{
 	text-align:center;
-	background-color: gray;
+	background-color: whitesmoke;
 	padding:10px;
+	margin:0;
 }
 .btn{
 	width: 68vw;
@@ -31,6 +33,8 @@ h1{
 	border-radius:5px;
 	margin:10px;
 	color:white;
+	text-align:center;
+	padding-top:8px;
 }
 .image{
 	margin:10px;
